--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,8 +7,8 @@ server.port=8089
 # PostgreSQL config start
 #----------------------------------------------------------------
 spring.datasource.url=jdbc:postgresql://localhost:5432/labchecker
-spring.datasource.username=${username}
-spring.datasource.password=${password}
+spring.datasource.username=${db_username}
+spring.datasource.password=${db_password}
 spring.jpa.database=POSTGRESQL
 spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.hibernate.ddl-auto=update
